EPMRPP-64369 Fix filter list overlapping

--- a/app/src/pages/inside/common/searchableFilterList/activeFilter/activeFilter.scss
+++ b/app/src/pages/inside/common/searchableFilterList/activeFilter/activeFilter.scss
@@ -17,7 +17,7 @@
 .filters-wrapper {
   width: calc(100% - 20px);
   margin: 1px 0 0;
-  padding: 10px 10px;
+  padding: 10px;
   background: $COLOR--white;
 }
 
