--- a/app/src/pages/inside/dashboardItemPage/modals/common/widgetControls/controls/filtersControl/filtersControl.scss
+++ b/app/src/pages/inside/dashboardItemPage/modals/common/widgetControls/controls/filtersControl/filtersControl.scss
@@ -17,7 +17,7 @@
 .filters-control {
   display: flex;
   width: 100%;
-  max-height: 420px;
+  max-height: 450px;
   margin-bottom: 10px;
   padding-bottom: 10px;
   align-items: center;
